# MutilAgentsRolePlay

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
services/api/: Dockerfile  pyproject.toml
services/api/app/: bootstrap.py  main.py
services/api/app/agent_runtime/: executor.py  types.py
services/api/app/api/: router.py
services/api/app/character/: models.py  service.py
services/api/app/core/: config.py
services/api/app/director/: models.py  service.py  visibility.py
services/api/app/expression/: __init__.py  interfaces.py  models.py  service.py  template.py
services/api/app/llm/: expression_prompting.py  expression_service.py  factory.py  interfaces.py  providers.py
services/api/app/plan/: models.py
services/api/app/relationship/: models.py  service.py
services/api/app/social/: interaction_service.py  interfaces.py  (+2 more)
services/api/mutilagentsroleplay_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: conftest.py  test_autonomous_executor.py  test_character_api.py  test_character_management_service.py  test_director_api.py  test_director_service.py  test_expression_service.py  test_health.py  test_llm_factory.py  test_llm_providers.py  test_moment_interaction_service.py  test_permission_policy.py  test_persistence_recovery.py  test_plan_persistence.py  test_relationship_service.py  test_runtime_consistency.py  test_social_api.py  test_social_models.py  test_social_service.py  test_thinking_engine.py  test_world_api.py  test_world_runtime.py
(+68 files in other folders)
